fixing positioning of invisible background image

--- a/packrat/styles/metro/pane.css
+++ b/packrat/styles/metro/pane.css
@@ -100,7 +100,7 @@ a.kifi-pane-head-settings {
   width: 40px;
   height: 100%;
   margin-right: 6px;
-  background-position: 200%;
+  background-position: 99px;
   background-repeat: no-repeat;
   position: relative;
   z-index: 1;
